# greylevel-concentration-camera

./: .gitignore  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/terry/com/greyleveltoconcentrationcamera/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/terry/com/greyleveltoconcentrationcamera/: MainActivity.java  StoreFileUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: filepaths.xml
app/src/test/java/terry/com/greyleveltoconcentrationcamera/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
